# desmo-api

./: .gitignore  Caddyfile  LICENSE  README.md  compose.yml  draw.py  pyproject.toml
ansible/: deploy-manager.yaml  inventory.yaml
ansible/project/: create_jail.yaml  delete_jail.yaml  prepare_runners.yaml  run_CMD.yaml  run_COPY.yaml  run_PKG.yaml  setup_jail.yaml
ansible/project/templates/: jail.conf.j2
ansible/templates/: FreeBSD.conf.j2  desmoapi.j2
desmo_api/: __init__.py  __main__.py  actions.py  api.py  caddy_client.py  db.py  desmo_api_client.py  enums.py  fsm.py  hcloud_dns.py  jail_fsm.py  log.py  migrations.py  models.py  prison_guard.py
desmo_api/jailer/: jail_fsm.py
desmofront/: .gitignore  Desmofile  desmo.manifest  nginx.conf
desmofront/usr/local/etc/nginx/: nginx.conf
desmofront/usr/local/www/desmo/: index.html
