[tool.poetry]
name = "desmo-api"
version = "0.4.1"
description = ""
authors = ["Panu Oksiala <panu@oksiala.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.9,<3.13"
ansible-runner = "^2.3.4"
fastapi = "^0.112.1"
aiohttp = {extras = ["speedups"], version = "^3.9.0"}
aiodns = "^3.1.1"
ansible = "^10.0.0"
asyncpg = "^0.29.0"
python-multipart = "^0.0.6"
tilakone = "^0.1.0"
uvicorn = "^0.30.6"
loguru = "^0.7.2"
femtoqueue = "^0.2.0"


[tool.poetry.group.dev.dependencies]
pydot = "*"
mypy = "*"
uvicorn = {extras = ["standard"], version = "*"}
flake8 = "*"
black = "*"

[tool.poe.tasks]
jailer  = "python -m desmo_api jailer"
api     = "uvicorn --port 8000 --env-file .env --reload desmo_api:app"
caddy   = "caddy run --config Caddyfile --watch"
format  = "black desmo_api"
flake   = "flake8 --max-line-length 88"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
